Mange/main/default/objects/Hostel__c/Hostel__c.object-meta.xml
<CustomObject>
    <label>Hostel</label>
    <nameField>
        <displayFormat>H-{0000}</displayFormat>
        <label>Hostel Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hostels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>