Mange/main/default/objects/Hostel__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Hostels</relationshipLabel>
    <relationshipName>Hostels1</relationshipName>
    <type>Lookup</type>
</CustomField>