Mange/main/default/objects/Hostel__c/fields/Hostel_Name__c.field-meta.xml
<CustomField>
    <fullName>Hostel_Name__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Naam Dallo</inlineHelpText>
    <label>Hostel</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>