Mange/main/default/objects/Hostel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Hostel_Name__c</columns>
    <columns>Hostel_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>