Mange/main/default/objects/Hostel__c/listViews/My_View.listView-meta.xml
<ListView>
    <fullName>My_View</fullName>
    <columns>NAME</columns>
    <columns>Hostel_Name__c</columns>
    <columns>Hostel_Type__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Mine</filterScope>
    <label>My View</label>
</ListView>